<resources>
    <string name="app_name" translatable="false">BluePrint</string>
    <string name="nav_header_title">Android Architecture BluePrint</string>
    <string name="nav_header_subtitle" translatable="false">gzn3926@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="label_welcome">Welcome</string>
    <string name="label_read">Read Me</string>
    <string name="label_login">Login</string>
    <string name="label_registration">Sign up</string>
    <string name="label_home">Home</string>
    <string name="label_fund">Add Fund</string>
    <string name="label_product">Purchase Product</string>
    <string name="label_share">Share</string>
    <string name="label_fund_available">Fund Available</string>
    <string name="label_exit">Exit</string>
    <string name="label_drinks">Drinks</string>
    <string name="label_flowers">Flowers</string>

    <string name="hint_biometric">BiometricAuthenticate</string>
    <string name="hint_registration">Sign Up</string>
    <string name="hint_sign_in">Sign In</string>
    <string name="hint_userName">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_continue">Continue</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_dob">Pick Date of Birth</string>
    <string name="hint_gender">Pick Gender</string>
    <string name="hint_sign_up">Complete Registration</string>
    <string name="hint_add_fund">Add Fund</string>
    <string name="hint_product">View Product</string>
    <string name="hint_sign_out">Sign Out</string>
    <string name="hint_delete_user">Delete User</string>

    <string name="error_sign_in">Sign In Unsuccessful</string>
    <string name="error_empty_user_name">Empty user name</string>
    <string name="error_empty_password">Empty password</string>
    <string name="error_incomplete_registration_info">Please Make sure all info are provided</string>

    <string name="message_fund_offer">Lucky Bank decides to offer $%1$d. Would you want to accept</string>
    <string name="message_warning_product_purchase_fail">Insufficient fund to purchase Product [%1$s] at price $[%2$d]</string>
    <string name="message_product_purchase_success">Congrats on the new Product [%1$s] purchased at price $[%2$d]</string>
    <string name="message_biometric">Would you like to authenticate using biometric</string>

    <string name="notification_channel">BluePrint Channel</string>
    <string name="notification_channel_description">BluePrint Channel for fun</string>

    <array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </array>

</resources>
